--- a/day.css
+++ b/day.css
@@ -1,3 +1,6 @@
+html {
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -139,7 +142,7 @@ body {
   .heading {
     font-size: 23px;
     font-weight: bold;
-    color: #ffba66;
+    color: #ff9900;
     font-family: Roboto;
     margin-top: 30px !important;
     width: 321px;
@@ -163,8 +166,8 @@ body {
 
   .mainimg {
     object-fit: contain;
-    height: 277px;
-    margin-top: -21px;
+    height: 217px;
+    margin-top: -8px;
   }
   #footer {
     margin: 0 !important;
@@ -211,7 +214,7 @@ body {
   .heading {
     font-size: 35px;
     font-weight: bold;
-    color: #ffba66;
+    color: #ff9900;
     font-family: Roboto;
     width: 485px;
     text-align: center;
