--- a/night.css
+++ b/night.css
@@ -1,3 +1,6 @@
+html {
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -216,12 +219,12 @@ input {
 
   .mainimg {
     object-fit: contain;
-    height: 277px;
-    margin-top: -21px;
+    height: 217px;
+    margin-top: -8px;
   }
   #footer {
     margin: 0 !important;
-    padding: 0 !important;
+    padding-bottom: 0 !important;
   }
 
   #left {
